--- a/www/index.html
+++ b/www/index.html
@@ -1,45 +1,60 @@
-<html>
-<head>
-<title>Project Home Page</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<HTML>
+<HEAD>
+	<TITLE>Fast Infoset Project</TITLE>
+	<link rel="alternate" type="application/rss+xml"
+		 href="/servlets/ProjectNewsRSS">
+	<style>
+	    .app H3 {
+		clear: none;
+	    }
+	    .axial {
+		display: none;
+	    }
+	    #apphead {
+		display: none;
+	    }
+	</style>
+</HEAD>
+<BODY LANG="en-US" DIR="LTR">
+<script>
+// kill "description" h3 bar
+ld = document.getElementById("longdescription");
+for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
+  if(n.nodeType==1 && n.innerHTML=="Description" ) {
+    n.parentNode.removeChild(n);
+    break;
+  }
+}
+</script>
+<TABLE BORDER=0 CELLPADDING=2 CELLSPACING=2>
+	<TR>
+		<TD>
+			<P><IMG SRC="javaxml-duke.gif" NAME="Graphic1" ALIGN=MIDDLE WIDTH=68 HEIGHT=86 BORDER=0></TD>
+		<TD>
+			<H1>Japex Project</H1>
+		</TD>
+	</TR>
+</TABLE>
+<P>Welcome to the Japex Project at java.net.</P>
 
-<body bgcolor="#FFFFFF" text="#000000">
-<h1>Default project home page </h1>
-<p>Congratulations on your new java.net project! </p>
-<p>This page is the home page for your new project. This content is appearing 
-  because you have selected the option <b>Use project index.html</b>. To edit 
-  the information displayed on this page, just use CVS to check out your project's 
-  CVS repository and edit index.html in directory www. You can get more information 
-  on how to set-up your local CVS client, click on <b>Version Control</b> on the 
-  left nav bar. </p>
-<p>If you don't want to use CVS to manage your home page, click on the <b>Edit 
-  project</b> link on this page and unclick the option <b>Use project index.html</b>. 
-  Your project home page contents will be generated from the <b>Edit project</b> 
-  field <b>Description</b>. Edit the text on that field to change your home page 
-  contents. Click on <b>Submit changes</b> to save your edits. </p>
-<p>If you are looking for <a href="https://java-net.dev.java.net/ProjectPages.html#templates">sample 
-  home page templates</a>, check out the <a href="https://java-net.dev.java.net/ProjectPages.html">java.net 
-  Project Starter Kit</a>. Copy either of the templates into your project's html 
-  to get started on your project's home page. </p>
-<p>You can find lots of helpful information in the Starter Kit to get your project 
-  started. Some of the things you will find in there include:</p>
-<ul>
-  <li>Hints on how to <a href="https://java-net.dev.java.net/ProjectPages.html#pages">set-up 
-    your project's</a> home page</li>
-  <li>Ideas on how to <a href="https://java-net.dev.java.net/ProjectPages.html#publicity">publicize 
-    your project</a> including RSS feeds</li>
-  <li>Hints on <a href="https://java-net.dev.java.net/pagedesign.html">project 
-    page HTML</a></li>
-  <li>Setting up project <a href="https://java-net.dev.java.net/ProjectPages.html#wiki">wiki 
-    pages</a></li>
-  <li>And places to go if <a href="https://java-net.dev.java.net/ProjectPages.html#feedback">you 
-    have questions</a>.</li>
-</ul>
-<p>Remember that you will attract more new members and your project team will 
-  work more effectively if you, as the project owner, supply sufficient information 
-  about your project for visitors to your project space. Good luck with your new 
-  project! </p>
-</body>
-</html>
+<H3><A NAME="introduction"></A>Introduction</H3>
+<P>Japex ... </P>
 
+<H3>Downloads</H3>
+<UL>
+</UL>
+<H3>Current status</H3>
+<P></P>
+<H3><A NAME="terms and conditions"></A>Terms and Conditions</H3>
+<P>The Japex code is made available under the terms of the Apache Source
+License, version 2.0 (<A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
+2.0</A>). ASL is a widely accepted and very flexible license; version
+2.0 adds explicit terms to cover the conditions for accepting
+contributions, reflecting experience gathered with the previous
+versions of the ASL. There is a single copyright owner, Sun
+Microsystems; multiple copyright owners can lead to very complicated
+legal situations. 
+</P>
+</BODY>
+</HTML>
