--- a/www/index.html
+++ b/www/index.html
@@ -30,32 +30,55 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 <TABLE BORDER=0 CELLPADDING=2 CELLSPACING=2>
 	<TR>
 		<TD>
-			<P><IMG SRC="duke.gif" NAME="Graphic1" ALIGN=MIDDLE WIDTH=68 HEIGHT=86 BORDER=0></TD>
+			<P><IMG SRC="duke.gif" NAME="Graphic1" ALIGN=MIDDLE WIDTH=86 HEIGHT=86 BORDER=0></TD>
 		<TD>
 			<H1>Japex Project</H1>
 		</TD>
 	</TR>
 </TABLE>
-<P>Welcome to the Japex Project at java.net.</P>
+<P>Welcome to the Japex Project at Java.net.</P>
 
 <H3><A NAME="overview"></A>Overview</H3>
 <UL>
-	<STRONG>Licenses:</STRONG> <A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
+	<LI><STRONG>Licenses:</STRONG> <A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
 	2.0</A> 
 	<LI><STRONG>Users Mailing List: </STRONG><A HREF="mailto:users@japex.dev.java.net">users@japex.dev.java.net</A>
-	
-	<LI><P><STRONG>Project News: </STRONG>
-	<A HREF="http://japex.dev.java.net/servlets/ProjectNewsRSS"><IMG SRC="images/rss1.gif" NAME="Graphic2" ALIGN=BOTTOM WIDTH=80 HEIGHT=15 BORDER=0></A>
-	(see <A HREF="http://wiki.java.net/bin/view/Javawsxml/RssCorner">RSS</A>)
-		</P>
 </UL>
 
 <H3><A NAME="introduction"></A>Introduction</H3>
-<P>Japex ... </P>
+<P>Profiling is an art, an art that it is very hard to master. Writing
+micro-benchmarks is one of the many tools available to programmers
+today. Micro-benchmarks are simple benchmarks that rarely involve
+complicated deployments and are often used to test specific parts
+of an application. They are also characterized by the use of
+wall-clock blocks: start a clock, run the code, stop the clock
+and report the result.</P>
+<P> The lack of common tools for writing micro-benchmarks makes comparing
+results published by different people impractical. Questions such
+as "When did you start/stop the clock?" or "What exactly did you
+include in the wall-clock block?" or "Are you reporting latency
+or throughput?" often arise.</P>
+<P>Japex is a simple yet powerful tool to write Java-based micro- benchmarks.
+It started as simple project over a year ago, primarily aimed at testing
+XML and Fast Infoset performance, but has evolved in to a
+rather sophisticated framework with support for XML and HTML output as
+well as various types of charts for displaying the results. It is  similar
+in spirit to <a href="http://www.junit.org>JUnit</a> in that if factors out most of the repetitive
+programming logic that is necessary to write in micro-benchmarks. This
+logic includes loading and initializing multiple drivers, warming up the
+VM, timing the inner loop, etc. One of the key design goals for 
+Japex was extensibility. Via the use
+of a simple model of input and output parameters, it is possible to
+write micro-benchmarks to test practically anything.</P>
+
+<H3>Samples</H3>
+<UL>
+</UL>
 
 <H3>Downloads</H3>
 <UL>
 </UL>
+
 <H3>Current status</H3>
 <P></P>
 <H3><A NAME="terms and conditions"></A>Terms and Conditions</H3>
