--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@ It started as simple project over a year ago, primarily aimed at testing
 XML and Fast Infoset performance, but has evolved in to a
 rather sophisticated framework with support for XML and HTML output as
 well as various types of charts for displaying the results. It is  similar
-in spirit to <a href="http://www.junit.org>JUnit</a> in that if factors out most of the repetitive
+in spirit to <a href="http://www.junit.org">JUnit</a> in that if factors out most of the repetitive
 programming logic that is necessary to write in micro-benchmarks. This
 logic includes loading and initializing multiple drivers, warming up the
 VM, timing the inner loop, etc. One of the key design goals for 
