*** empty log message ***

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 <TABLE BORDER=0 CELLPADDING=2 CELLSPACING=2 STYLE="page-break-before: always">
 	<TR>
 		<TD>
-			<P><A HREF="images/duke.gif"><IMG SRC="duke.gif" NAME="Graphic1" ALIGN=MIDDLE WIDTH=86 HEIGHT=86 BORDER=0></A></P>
+			<P><A HREF="images/duke.gif"><IMG SRC="images/duke.gif" NAME="Graphic1" ALIGN=MIDDLE WIDTH=86 HEIGHT=86 BORDER=0></A></P>
 		</TD>
 		<TD>
 			<H1>Japex Project</H1>
