*** empty log message ***

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 		<TD>
 			<P><A HREF="images/japex.gif"><IMG SRC="images/japex.gif" NAME="Japex" ALIGN=MIDDLE WIDTH=120 HEIGHT=100 BORDER=0></A></P>
 		</TD>
-		<TD>
+		<TD align=middle>
 			<H1>Japex Project</H1>
 		</TD>
 	</TR>
