*** empty log message ***

--- a/www/index.html
+++ b/www/index.html
@@ -132,15 +132,14 @@ charts that are currently supported by Japex.</P>
 <UL>
 	<LI><P STYLE="margin-bottom: 0in"><B>Downloading:</B></P>
 	<UL>
-		<LI><P STYLE="margin-bottom: 0in">Latest build: ???</P>
-		<LI><P STYLE="margin-bottom: 0in">CVS Source tree: <FONT SIZE=2><FONT FACE="Andale Mono, monospace">cvs
-		-d :pserver:&lt;login&gt;@cvs.dev.java.net:/cvs co japex</FONT></FONT></P>
+		<LI><P STYLE="margin-bottom: 0in"><a href="https://japex.dev.java.net/servlets/ProjectDocumentList">Latest Build</a></P>
+		<LI><P STYLE="margin-bottom: 0in"><a href="https://japex.dev.java.net/source/browse/japex">CVS Source Tree</a></P>
 	</UL>
 	<LI><P STYLE="margin-bottom: 0in"><STRONG>Documentation: </STRONG>
 	</P>
 	<UL>
-		<LI><P STYLE="margin-bottom: 0in; font-weight: medium">Japex manual</P>
-		<LI><P STYLE="margin-bottom: 0in; font-weight: medium">Blogs</P>
+		<LI><P STYLE="margin-bottom: 0in; font-weight: medium"><a href="https://japex.dev.java.net/source/browse/*checkout*/docs/manual.html?content-type=text%2Fplain">Japex Manual</a></P>
+		<LI><P STYLE="margin-bottom: 0in; font-weight: medium"><a href="http://weblogs.java.net/blog/spericas/">Santiago's Blog</a></P>
 	</UL>
 	<LI><P STYLE="margin-bottom: 0in"><STRONG>Licenses:</STRONG> <A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
 	2.0</A></P>
