Update it reference to manual in www directory.

--- a/www/index.html
+++ b/www/index.html
@@ -138,7 +138,7 @@ charts that are currently supported by Japex.</P>
 	<LI><P STYLE="margin-bottom: 0in"><STRONG>Documentation: </STRONG>
 	</P>
 	<UL>
-		<LI><P STYLE="margin-bottom: 0in; font-weight: medium"><a href="https://japex.dev.java.net/source/browse/*checkout*/japex/docs/manual.html?content-type=text/html">Japex Manual</a></P>
+		<LI><P STYLE="margin-bottom: 0in; font-weight: medium"><a href="docs/manual.html">Japex Manual</a></P>
 		<LI><P STYLE="margin-bottom: 0in; font-weight: medium"><a href="http://weblogs.java.net/blog/spericas/">Santiago's Blog</a></P>
 	</UL>
 	<LI><P STYLE="margin-bottom: 0in"><STRONG>Licenses:</STRONG> <A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
