--- a/www/index.html
+++ b/www/index.html
@@ -18,17 +18,25 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 </SCRIPT>
 </HEAD>
 <BODY LANG="en-US" DIR="LTR">
-<TABLE BORDER=0 CELLPADDING=2 CELLSPACING=2 STYLE="page-break-before: always">
+<TABLE BORDER=0 CELLPADDING=2 CELLSPACING=20 STYLE="page-break-before: always">
 	<TR>
 		<TD>
 			<P><A HREF="images/japex.gif"><IMG SRC="images/japex.gif" NAME="Japex" ALIGN=MIDDLE WIDTH=120 HEIGHT=100 BORDER=0></A></P>
 		</TD>
-		<TD align=middle>
+		<TD align=middle">
 			<H1>Japex Project</H1>
 		</TD>
+                <TD width="50"><P>&nbsp;&nbsp;&nbsp;&nbsp;</P></TD>
+                <TD width="50"><P>&nbsp;&nbsp;&nbsp;&nbsp;</P></TD>
+                <TD width="50"><P>&nbsp;&nbsp;&nbsp;&nbsp;</P></TD>
+                <TD align="right">
+                    <P><A HREF="https://glassfish.dev.java.net/">
+                        <IMG SRC="https://glassfish.dev.java.net/public/image/glassfish_logo.gif" NAME="Glassfish Community" BORDER=0/>
+                    </A></P>
+                </TD>
 	</TR>
 </TABLE>
-<P>Welcome to the Japex Project at Java.net.</P>
+<P>Welcome to the Japex Project at Java.net. This project is part of the <a href="https://glassfish.dev.jav.net">Glassfish Community</a>.</P>
 <H3><A NAME="introduction"></A>Introduction</H3>
 <P>Profiling is an art, an art that it is very hard to master.
 Writing micro-benchmarks is one of the many tools available to
