Updating look and feel.

--- a/www/index.html
+++ b/www/index.html
@@ -26,18 +26,9 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 		<TD align=middle">
 			<H1>Japex Project</H1>
 		</TD>
-                <TD width="100"><P>&nbsp;&nbsp;&nbsp;&nbsp;</P></TD>
-                <TD width="100"><P>&nbsp;&nbsp;&nbsp;&nbsp;</P></TD>
-                <TD width="100"><P>&nbsp;&nbsp;&nbsp;&nbsp;</P></TD>
-                <TD align="right">
-                    <P><A HREF="https://glassfish.dev.java.net/">
-                        <IMG SRC="https://glassfish.dev.java.net/public/image/glassfish_logo.gif" NAME="Glassfish Community" BORDER=0/>
-                    </A></P>
-                </TD>
 	</TR>
 </TABLE>
-<P>Welcome to the Japex Project at Java.net. This project is part of the <a href="https://glassfish.dev.jav.net">Glassfish Community</a>.</P>
-<H3><A NAME="introduction"></A>Introduction</H3>
+<H3><A NAME="Introduction"></A>Introduction</H3>
 <P>Profiling is an art, an art that it is very hard to master.
 Writing micro-benchmarks is one of the many tools available to
 programmers today. Micro-benchmarks are simple benchmarks that rarely
@@ -136,7 +127,7 @@ charts that are currently supported by Japex.</P>
 		</TR>
 	</TABLE>
 </CENTER>
-<H3>Resources</H3>
+<H3><A name="Resources"></A>Resources</H3>
 <UL>
 	<LI><P STYLE="margin-bottom: 0in"><B>Downloading:</B></P>
 	<UL>
@@ -155,7 +146,7 @@ charts that are currently supported by Japex.</P>
 	</STRONG><A HREF="mailto:users@japex.dev.java.net">users@japex.dev.java.net</A>
 		</P>
 </UL>
-<H3><A NAME="terms and conditions"></A>Terms and Conditions</H3>
+<H3><A NAME="Terms"></A>Terms and Conditions</H3>
 <P>The Japex code is made available under the terms of the Apache
 Source License, version 2.0 (<A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
 2.0</A>). ASL is a widely accepted and very flexible license; version
