Updating look and feel.

--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@ multiple drivers, warming up the VM, forking multiple threads, timing the inner 
 of the key design goals for Japex was extensibility. Via the use of a
 simple model of input and output parameters, it is possible to write
 micro-benchmarks to test practically anything.</P>
-<H3>Overview</H3>
+<H3><A NAME="Overview"></A>Overview</H3>
 <P>A Japex micro-benchmark comprises of a set of Japex Drivers (i.e.,
 Java classes extending <FONT SIZE=2><FONT FACE="Andale Mono, monospace">com.sun.japex.JapexDriverBase</FONT></FONT>)
 and at least one configuration file to describe the drivers under
