--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -17,12 +17,11 @@
   <li>
     <a href="#Overview">Overview</a>
   <li>
-    <a href="#Terms">Terms and Conditions</a>
-  <li>  
-        
+    <a href="#Resources">Resources</a>
   <li>
-    <a href="/servlets/ProjectNewsList">News</a>
-  
+    <a href="https://japex.dev.java.net/servlets/ProjectDocumentList">Downloading</a>
+  <li>
+    <a href="#Terms">Terms and Conditions</a>  
   <li><a href="#">Support</a>
   <ul>
     <li><a href="/servlets/ProjectMailingListList">Mailing List</a>
@@ -42,7 +41,7 @@
 -->
 <script>
 var info = {
-	title: "Japex",
+	title: "Japex Project",
 	logo: "https://xsom.dev.java.net/javaxml-duke.gif"
 }
 </script>
