Updating look and feel.

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -13,15 +13,15 @@
 -->
 <ul>
   <li>
-    <a href="#Introduction">Introduction</a>
+    <a href="https://japex.dev.java.net/#Introduction">Introduction</a>
   <li>
-    <a href="#Overview">Overview</a>
-  <li>
-    <a href="#Resources">Resources</a>
+    <a href="https://japex.dev.java.net/#Overview">Overview</a>
   <li>
     <a href="https://japex.dev.java.net/servlets/ProjectDocumentList">Downloading</a>
   <li>
-    <a href="#Terms">Terms and Conditions</a>  
+    <a href="https://japex.dev.java.net/#Resources">Resources</a>
+  <li>
+    <a href="https://japex.dev.java.net/#Terms">Terms and Conditions</a>  
   <li><a href="#">Support</a>
   <ul>
     <li><a href="/servlets/ProjectMailingListList">Mailing List</a>
