Updating look and feel.

--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,8 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 		<TD>
 			<P><A HREF="images/japex.gif"><IMG SRC="images/japex.gif" NAME="Japex" ALIGN=MIDDLE WIDTH=120 HEIGHT=100 BORDER=0></A></P>
 		</TD>
-		<TD align=middle" height="100">
-			<H2>Japex Project</H2>
+		<TD align="center" height="100">
+			<H1>Japex Project</H1>
 		</TD>
 	</TR>
 </TABLE>
