--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -52,7 +52,7 @@ var info = {
   
   This example uses the ws/xml zone, but pick up the right zone that matches your project.
 -->
-<script src="https://glassfish-theme.dev.java.net/zone-core.js"></script>
+<script src="https://glassfish-theme.dev.java.net/zone-tools.js"></script>
 <!--
   This includes the theme engine script.
 -->
