--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,8 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 			<P><A HREF="images/japex.gif"><IMG SRC="images/japex.gif" NAME="Japex" ALIGN=MIDDLE WIDTH=120 HEIGHT=100 BORDER=0></A></P>
 		</TD>
 		<TD align="center" height="100"><font size="+3" face="Verdana, Arial, Helvetica, sans-serif">
-		  <large>Japex Project</large>
+                        <p><br>
+                        <large>Japex Project</large></p>
 		</font></TD>
 	</TR>
 </TABLE>
