Removing duplicate title and logo.

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -42,7 +42,7 @@
 <script>
 var info = {
 	title: "Japex Project",
-	logo: "https://xsom.dev.java.net/javaxml-duke.gif"
+	logo: "https://japex.dev.java.net/images/japex.gif"
 }
 </script>
 <!--
