Use small logo.

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -42,7 +42,7 @@
 <script>
 var info = {
 	title: "Japex Project",
-	logo: "https://japex.dev.java.net/images/small-japex.gif"
+	logo: "https://japex.dev.java.net/images/small_japex.gif"
 }
 </script>
 <!--
