--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,8 @@
         <META NAME="CHANGED" CONTENT="20051221;10380700">
     </HEAD>
     <BODY LANG="en-US" DIR="LTR">
-        <SCRIPT>document.getElementById("projecthome").getElementsByTagName("table").firstChild.style.display="none";</SCRIPT>
+        <!-- Hide old summary/categories/license/owner table -->
+        <SCRIPT>document.getElementById("projecthome").getElementsByTagName("table").item(0).style.display="none";</SCRIPT>
         <H3><A NAME="Introduction"></A><font face="Verdana, Arial, Helvetica, sans-serif">Introduction</font></H3>
         <P><font face="Verdana, Arial, Helvetica, sans-serif">Profiling is an art, an art that it is very hard to master.
                 Writing micro-benchmarks is one of the many tools available to
