Change link to blog to show all Japex entries.

--- a/www/index.html
+++ b/www/index.html
@@ -120,8 +120,7 @@
             </font></P>
             <UL>
                 <LI><P STYLE="margin-bottom: 0in; font-weight: medium"><font face="Verdana, Arial, Helvetica, sans-serif"><a href="docs/manual.html">Japex Manual</a></font></P>
-                <LI><P STYLE="margin-bottom: 0in; font-weight: medium"><font face="Verdana, Arial, Helvetica, sans-serif"><a href="http://weblogs.java.net/blog/spericas/">Santiago's Blog</a></font></P>
-            </UL>
+                <LI><P STYLE="margin-bottom: 0in; font-weight: medium"><font face="Verdana, Arial, Helvetica, sans-serif"><a href="http://weblogs.java.net/mt/search?IncludeBlogs=216&search=japex">Japex in Santiago's Blog</a></font></P> </UL>
             <LI><P STYLE="margin-bottom: 0in"><font face="Verdana, Arial, Helvetica, sans-serif"><STRONG>Licenses:</STRONG> <A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
             2.0</A></font></P>
             <LI><P STYLE="margin-bottom: 0in"><font face="Verdana, Arial, Helvetica, sans-serif"><STRONG>Users Mailing List:
