--- a/www/index.html
+++ b/www/index.html
@@ -136,5 +136,9 @@
                 versions of the ASL. There is a single copyright owner, Sun
                 Microsystems; multiple copyright owners can lead to very complicated
         legal situations. </font></P>
+        <P><font face="Verdana, Arial, Helvetica, sans-serif">This project is governed by
+        the same rules defined by Glassfish. For more information, please refer to the 
+        <a href="https://glassfish.dev.java.net/public/GovernancePolicy.html">Glassfish 
+        Project Governance Policy</a> page.</P>
     </BODY>
 </HTML>
