--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <BODY LANG="en-US" DIR="LTR">
         <!-- Hide old summary/categories/license/owner table -->
         <SCRIPT>document.getElementById("projecthome").getElementsByTagName("table").item(0).style.display="none";</SCRIPT>
+        <H1>Japex Micro-benchmark Framework</H1>
         <H3><A NAME="Introduction"></A><font face="Verdana, Arial, Helvetica, sans-serif">Introduction</font></H3>
         <P><font face="Verdana, Arial, Helvetica, sans-serif">Profiling is an art, an art that it is very hard to master.
                 Writing micro-benchmarks is one of the many tools available to
@@ -109,6 +110,7 @@
                 </TR>
             </TABLE>
         </CENTER>
+        <!--
         <H3><A name="Resources"></A><font face="Verdana, Arial, Helvetica, sans-serif">Resources</font></H3>
         <UL>
             <LI><P STYLE="margin-bottom: 0in"><font face="Verdana, Arial, Helvetica, sans-serif"><B>Downloading:</B></font></P>
@@ -127,6 +129,7 @@
                     </STRONG><A HREF="mailto:users@japex.dev.java.net">users@japex.dev.java.net</A>
             </font> </P>
         </UL>
+        -->
         <H3><A NAME="Terms"></A><font face="Verdana, Arial, Helvetica, sans-serif">Terms and Conditions</font></H3>
         <P><font face="Verdana, Arial, Helvetica, sans-serif">The Japex code is made available under the terms of the Apache
                 Source License, version 2.0 (<A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
@@ -140,6 +143,5 @@
         the same rules defined by Glassfish. For more information, please refer to the 
         <a href="https://glassfish.dev.java.net/public/GovernancePolicy.html">Glassfish 
         Project Governance Policy</a> page.</P>
-
     </BODY>
 </HTML>
