Some more cleanup.

--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
                 &quot;What exactly did you include in the wall-clock block?&quot; or
         &quot;Are you reporting latency or throughput?&quot; often arise.</font></P>
         <P><font face="Verdana, Arial, Helvetica, sans-serif">Japex is a simple yet powerful tool to write Java-based
-                micro-benchmarks. It started as a simple project over a year ago,
+                micro-benchmarks. It started as a simple project 
                 primarily aimed at testing XML and <A HREF="https://fi.dev.java.net/">Fast
                 Infoset</A> performance, but has evolved into a rather sophisticated
                 framework with support for XML and HTML output as well as various
