Unbreak images, add link to maven doc.

--- a/www/index.html
+++ b/www/index.html
@@ -111,6 +111,11 @@
                 </TR>
             </TABLE>
         </CENTER>
+	<h2>Maven Plugin</h2>
+	    <p>As of version 1.2, Japex includes a Maven2 plugin to
+	    run microbenchmarks from the maven build. For more
+	    information, see <a href="japex-maven-plugin/index.html">the documentation</a>.
+	    </p>
         <!--
         <H3><A name="Resources"></A><font face="Verdana, Arial, Helvetica, sans-serif">Resources</font></H3>
         <UL>
