Restored Terms and Conditions section.

--- a/www/index.html
+++ b/www/index.html
@@ -134,20 +134,18 @@
             <LI><P STYLE="margin-bottom: 0in"><font face="Verdana, Arial, Helvetica, sans-serif"><STRONG>Users Mailing List:
                     </STRONG><A HREF="mailto:users@japex.dev.java.net">users@japex.dev.java.net</A>
             </font> </P>
-        </UL>
-        <H3><A NAME="Terms"></A><font face="Verdana, Arial, Helvetica, sans-serif">Terms and Conditions</font></H3>
+        </UL-->
+        <H2><A NAME="Terms"></A><font face="Verdana, Arial, Helvetica, sans-serif">Terms and Conditions</font></H2>
         <P><font face="Verdana, Arial, Helvetica, sans-serif">The Japex code is made available under the terms of the Apache
                 Source License, version 2.0 (<A HREF="http://www.apache.org/licenses/LICENSE-2.0">ASL
                 2.0</A>). ASL is a widely accepted and very flexible license; version
                 2.0 adds explicit terms to cover the conditions for accepting
                 contributions, reflecting experience gathered with the previous
-                versions of the ASL. There is a single copyright owner, Sun
-                Microsystems; multiple copyright owners can lead to very complicated
-        legal situations. </font></P>
+                versions of the ASL. There is a single copyright owner, Oracle;
+                multiple copyright owners can lead to very complicated legal situations. </font></P>
         <P><font face="Verdana, Arial, Helvetica, sans-serif">This project is governed by
         the same rules defined by Glassfish. For more information, please refer to the 
-        <a href="https://glassfish.dev.java.net/public/GovernancePolicy.html">Glassfish 
-        Project Governance Policy</a> page.</P>
-        -->
+        <a href="https://glassfish.sjava.net/public/GovernancePolicy.html">Glassfish
+        Project Governance Policy</a> page.</font></P>
     </BODY>
 </HTML>
