--- a/www/index.html
+++ b/www/index.html
@@ -127,7 +127,7 @@
                 multiple copyright owners can lead to very complicated legal situations.</P>
         <P>This project is governed by
         the same rules defined by Glassfish. For more information, please refer to the 
-        <a href="https://glassfish.sjava.net/public/GovernancePolicy.html">Glassfish
+        <a href="https://glassfish.java.net/public/GovernancePolicy.html">Glassfish
         Project Governance Policy</a> page.</P>
     </BODY>
 </HTML>
