Fixed links to old Java.net site.

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
         &quot;Are you reporting latency or throughput?&quot; often arise.</P>
         <P>Japex is a simple yet powerful tool to write Java-based
                 micro-benchmarks. It started as a simple project 
-                primarily aimed at testing XML and <A HREF="https://fi.dev.java.net/">Fast
+                primarily aimed at testing XML and <A HREF="http://fi.java.net/">Fast
                 Infoset</A> performance, but has evolved into a rather sophisticated
                 framework with support for XML and HTML output as well as various
                 types of charts for displaying the results. It is similar in spirit
@@ -71,7 +71,7 @@
                         </P>
                     </TD>
                     <TD WIDTH=61%>
-                        <P ALIGN=CENTER><MAP NAME="MAP1"><AREA SHAPE=RECT COORDS="172,84,277,171" HREF="https://japex.dev.java.net/" TARGET="_self" ALT="Japex"><AREA SHAPE=RECT COORDS="354,135,460,245" HREF="https://japex.dev.java.net/sample/report.html" TARGET="_self" ALT="HTML Report"><AREA SHAPE=RECT COORDS="354,0,460,107" HREF="https://japex.dev.java.net/sample/report.xml" TARGET="_self" ALT="XML Report"><AREA SHAPE=RECT COORDS="0,74,104,184" HREF="https://japex.dev.java.net/sample/config.xml" TARGET="_self" ALT="Config File"></MAP><IMG SRC="images/japexio.jpg" NAME="Graphic5" ALIGN=LEFT WIDTH=460 HEIGHT=245 BORDER=0 USEMAP="#MAP1"><BR CLEAR=LEFT><BR>
+                        <P ALIGN=CENTER><MAP NAME="MAP1"><AREA SHAPE=RECT COORDS="172,84,277,171" HREF="http://japex.java.net/" TARGET="_self" ALT="Japex"><AREA SHAPE=RECT COORDS="354,135,460,245" HREF="http://japex.java.net/sample/report.html" TARGET="_self" ALT="HTML Report"><AREA SHAPE=RECT COORDS="354,0,460,107" HREF="http://japex.java.net/sample/report.xml" TARGET="_self" ALT="XML Report"><AREA SHAPE=RECT COORDS="0,74,104,184" HREF="http://japex.java.net/sample/config.xml" TARGET="_self" ALT="Config File"></MAP><IMG SRC="images/japexio.jpg" NAME="Graphic5" ALIGN=LEFT WIDTH=460 HEIGHT=245 BORDER=0 USEMAP="#MAP1"><BR CLEAR=LEFT><BR>
                         </P>
                     </TD>
                     <TD WIDTH=17%>
@@ -127,7 +127,7 @@
                 multiple copyright owners can lead to very complicated legal situations.</P>
         <P>This project is governed by
         the same rules defined by Glassfish. For more information, please refer to the 
-        <a href="https://glassfish.java.net/public/GovernancePolicy.html">Glassfish
+        <a href="http://glassfish.java.net/public/GovernancePolicy.html">Glassfish
         Project Governance Policy</a> page.</P>
     </BODY>
 </HTML>
