--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
                 simple model of input and output parameters, it is possible to write
         micro-benchmarks to test practically anything.</P>
         <H3><A NAME="Overview"></A>Overview</H3>
-        <P> Japex micro-benchmark comprises of a set of Japex Drivers (i.e.,
+        <P> Japex micro-benchmark comprises a set of Japex Drivers (i.e.,
                 Java classes extending <tt>com.sun.japex.JapexDriverBase</tt>)
                 and at least one configuration file to describe the drivers under
                 test, the list of test cases and the various parameters used to
@@ -112,9 +112,10 @@
                 </TR>
             </TABLE>
         </CENTER>
-	<h2>Maven Plugin</h2>
-	    <p>As of version 1.2, Japex includes a Maven2 plugin to
-	    run microbenchmarks from the maven build. For more
+	<h2>Documentation</h2>
+	    <p>Please refer to the <a href="http://japex.java.net/docs/manual.html">Japex manual</a>. 
+            As of version 1.2, Japex includes a Maven2 plugin to
+	    run microbenchmarks from a maven build. For more
 	    information, see <a href="japex-maven-plugin/index.html">the documentation</a>.
 	    </p>
         <H2><A NAME="Terms"></A>Terms and Conditions</H2>
